syntax = "proto3";

package access_svc;

import "empty.proto";

option go_package = ".;access_svc";

message Data {
  int32 Id = 1;
  string Name = 2;
}

message SearchAccessResponse {
  repeated access_svc.Data Data = 1;
}

message SearchAccessRequest {
  google.protobuf.Empty empty = 1;
}

service AccessService {
  rpc SearchAccessData(SearchAccessRequest) returns (SearchAccessResponse);
}