syntax = "proto3";

package account_svc;

option go_package = ".;account_svc";

message pagination_meta {
  int32 total_results = 1;
  int32 total_pages = 2;
  int32 page = 3;
  int32 per_page = 4;
}

message pagination_request {
  int32 page_number = 1;
  int32 page_size = 2;
}
