syntax = "proto3";

option go_package = ".;role_svc";

package role_svc;

import "empty.proto";

message pagination_meta {
  int32 total_results = 1;
  int32 total_pages = 2;
  int32 page = 3;
  int32 per_page = 4;
}

message pagination_request {
  int32 page_number = 1;
  int32 page_size = 2;
}

message data{
  int32 id = 1;
  string name = 2;
}

message SearchRoleResponse {
  pagination_meta meta = 1;
  repeated data data = 2;
}

message SearchRoleRequest {
  google.protobuf.Empty empty = 1;
}

service RoleService {
  rpc SearchRole(SearchRoleRequest) returns (SearchRoleResponse) {};
}

